--- a/edge_detection_demo.ipynb
+++ b/edge_detection_demo.ipynb
@@ -23,11 +23,20 @@
     "\n",
     "This demo shows how to use [Qiskit™](https://qiskit.org/) to perform edge detection in images. Edge detection is useful for processing images to create training sets for machine learning algorithms, such as road lane detection.\n",
     "\n",
+    "![noimg](./img/edge.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "2019's smart phones take photos with about 300,000,000 bits. While classical computers would need to make 300,000,000 calculations to detect edges in such a photo, a quantum computer can do the same job by performing **one computation on just a single qubit**, no matter how many pixels are in the image.\n",
     "\n",
-    "However, because the image must be encoded as a quantum state and decoded back into an image, the overall workflow does not have a quantum advantage. Nonetheless, we'll see that a lot can be done with just a single simple quantum logic gate.\n",
-    "\n",
-    "![noimg](./img/edge.png)"
+    "However, because the image must be encoded as a quantum state and decoded back into an image, the overall workflow does not have a quantum advantage. Nonetheless, we'll see that a lot can be done with just a single simple quantum logic gate."
    ]
   },
   {
